[package]
name = "Restore_FS"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.40.0", features = ["csv", "lazy", "strings", "replace", "regex", "concat_str", "polars-ops"] }
walkdir = "2.3.2"
regex = "1.7.1"
log = "0.4.21"
env_logger = "0.9"
argparse = "0.2.2"
glob = "0.3.1"